[gd_scene load_steps=21 format=3 uid="uid://dc8n870gjn7w5"]

[ext_resource type="Script" uid="uid://cgim0qq7mq8nd" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://ccmm4lmqmji80" path="res://image/Rectangle 1.png" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://bh5oowp7wwgs7" path="res://image/Rectangle 2.png" id="3_getpj"]
[ext_resource type="Texture2D" uid="uid://b2toq77abd1ve" path="res://image/Rectangle 3.png" id="4_ryguw"]
[ext_resource type="Texture2D" uid="uid://bsmqsmixipran" path="res://image/Rectangle 4.png" id="5_d13ii"]
[ext_resource type="FontFile" uid="uid://co0u3tm01b16u" path="res://font/PixelifySans-Bold.ttf" id="5_yaehf"]
[ext_resource type="Texture2D" uid="uid://8xvyj1ntayd" path="res://image/Rectangle 5.png" id="6_1u8w0"]
[ext_resource type="FontFile" uid="uid://clpkpl56xmdl" path="res://font/PixelifySans-SemiBold.ttf" id="6_074og"]
[ext_resource type="FontFile" uid="uid://dbg2hpf5lhujh" path="res://font/PixelifySans-Regular.ttf" id="6_ryguw"]
[ext_resource type="Texture2D" uid="uid://icongcmtod8g" path="res://image/Rectangle 11.png" id="7_0odxb"]
[ext_resource type="Texture2D" uid="uid://7u04mqn2lumr" path="res://image/LESS EVIL NAME CHATBOT SERVICES INC..png" id="8_lswn8"]
[ext_resource type="Texture2D" uid="uid://bf8erhw1c2bbb" path="res://image/image 1.png" id="9_a6jrf"]
[ext_resource type="Texture2D" uid="uid://byfgnv0c0v30g" path="res://image/Rectangle 12.png" id="10_xuqvo"]
[ext_resource type="Texture2D" uid="uid://dhim0n2vves2c" path="res://image/Rectangle 14.png" id="12_kq58d"]
[ext_resource type="Texture2D" uid="uid://b3j078awxj06l" path="res://image/Rectangle 16.png" id="14_htxhm"]
[ext_resource type="AudioStream" uid="uid://ckrojubyw01vy" path="res://sound/theme1.ogg" id="17_yaehf"]
[ext_resource type="Texture2D" uid="uid://cf7ja3ee5lqvr" path="res://image/Service Number_ #2124850285.png" id="19_facbu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_getpj"]
atlas = ExtResource("6_1u8w0")
region = Rect2(8, 0, 333, 364)

[sub_resource type="Theme" id="Theme_074og"]

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("14_htxhm")
region = Rect2(0, 0, 82, 36)

[node name="aua" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Rectangle1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0xm2m")

[node name="Rectangle4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -849.5
offset_top = -411.0
offset_right = 849.5
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_d13ii")

[node name="Control" type="Control" parent="Rectangle4"]
anchors_preset = 0
offset_left = 201.5
offset_right = 1689.5
offset_bottom = 812.0

[node name="MarginContainer" type="MarginContainer" parent="Rectangle4/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 20

[node name="Main_Text" type="RichTextLabel" parent="Rectangle4/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_ryguw")
theme_override_fonts/bold_font = ExtResource("5_yaehf")
theme_override_fonts/bold_italics_font = ExtResource("6_074og")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
scroll_following = true

[node name="Rectangle3" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 312.0
offset_top = 11.0
offset_right = 1422.0
offset_bottom = 82.0
texture = ExtResource("4_ryguw")

[node name="HBoxContainer" type="HBoxContainer" parent="Rectangle3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Rectangle3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 21

[node name="Rectangle11" type="TextureRect" parent="Rectangle3/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_0odxb")

[node name="Bar_Rect_Satisfaction" type="ColorRect" parent="Rectangle3/HBoxContainer/MarginContainer/Rectangle11"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 34.0
offset_bottom = 28.0
size_flags_horizontal = 4

[node name="Rectangle13" type="TextureRect" parent="Rectangle3/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("10_xuqvo")

[node name="MarginContainer2" type="MarginContainer" parent="Rectangle3/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 17

[node name="Label" type="Label" parent="Rectangle3/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 25
text = "Satisfaction"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 11.0
offset_right = 40.0
offset_bottom = 51.0
theme_override_constants/margin_left = 66

[node name="Rectangle2" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_getpj")

[node name="VBoxContainer" type="BoxContainer" parent="MarginContainer/Rectangle2"]
layout_mode = 0
offset_left = 21.0
offset_top = 204.0
offset_right = 223.0
offset_bottom = 737.0
theme_override_constants/separation = 23
vertical = true

[node name="Control_Person_A" type="Control" parent="MarginContainer/Rectangle2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(202, 88)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_A"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 208.0
offset_bottom = 90.0
mouse_filter = 1
color = Color(0.16470589, 0.12156863, 0.11372549, 0.83137256)

[node name="base_color" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_A"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 85.0
mouse_filter = 1
color = Color(0.4745098, 0.3764706, 0.36078432, 1)

[node name="Label" type="Label" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_A/base_color"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -25.0
offset_right = 79.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 25
text = "Person A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Person_B" type="Control" parent="MarginContainer/Rectangle2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(202, 88)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_B"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 208.0
offset_bottom = 90.0
mouse_filter = 1
color = Color(0.16470589, 0.12156863, 0.11372549, 0.83137256)

[node name="base_color" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_B"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 85.0
mouse_filter = 1
color = Color(0.4745098, 0.3764706, 0.36078432, 1)

[node name="Label" type="Label" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_B/base_color"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -25.0
offset_right = 79.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 25
text = "Person B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Person_C" type="Control" parent="MarginContainer/Rectangle2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(202, 88)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_C"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 208.0
offset_bottom = 90.0
mouse_filter = 1
color = Color(0.16470589, 0.12156863, 0.11372549, 0.83137256)

[node name="base_color" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_C"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 85.0
mouse_filter = 1
color = Color(0.4745098, 0.3764706, 0.36078432, 1)

[node name="Label" type="Label" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_C/base_color"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -25.0
offset_right = 79.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 25
text = "Person C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Softea" type="Control" parent="MarginContainer/Rectangle2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(202, 88)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Softea"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 208.0
offset_bottom = 90.0
mouse_filter = 1
color = Color(0.16470589, 0.12156863, 0.11372549, 0.83137256)

[node name="base_color" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Softea"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 85.0
mouse_filter = 1
color = Color(0.4745098, 0.3764706, 0.36078432, 1)

[node name="Label" type="Label" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Softea/base_color"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -25.0
offset_right = 79.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 25
text = "Softea"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Person_D" type="Control" parent="MarginContainer/Rectangle2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(202, 88)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_D"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 208.0
offset_bottom = 90.0
mouse_behavior_recursive = 1
color = Color(0.16470589, 0.12156863, 0.11372549, 0.83137256)

[node name="base_color" type="ColorRect" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_D"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 85.0
mouse_behavior_recursive = 1
color = Color(0.4745098, 0.3764706, 0.36078432, 1)

[node name="Label" type="Label" parent="MarginContainer/Rectangle2/VBoxContainer/Control_Person_D/base_color"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -25.0
offset_right = 79.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 25
text = "Person D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rectangle6" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1544.0
offset_top = 40.0
offset_right = 1885.0
offset_bottom = 412.0
color = Color(0, 0, 0, 0.48235294)

[node name="Rectangle5" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1538.0
offset_top = 34.0
offset_right = 1879.0
offset_bottom = 406.0
texture = SubResource("AtlasTexture_getpj")

[node name="MarginContainer" type="MarginContainer" parent="Rectangle5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_right = 142.0
offset_bottom = 288.0
grow_horizontal = 2
theme_override_constants/margin_top = 16

[node name="Image1" type="TextureRect" parent="Rectangle5/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_a6jrf")

[node name="Label" type="Label" parent="Rectangle5"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -56.0
offset_right = 110.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 34
text = "Softea"
horizontal_alignment = 1

[node name="Rectangle15" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -78.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("12_kq58d")

[node name="HBoxContainer" type="HBoxContainer" parent="Rectangle15"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -18.0
offset_right = 271.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 33

[node name="Control_Settings" type="Control" parent="Rectangle15/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 47)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Rectangle15/HBoxContainer/Control_Settings"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 147.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.27058825)

[node name="base_color" type="TextureRect" parent="Rectangle15/HBoxContainer/Control_Settings"]
self_modulate = Color(0.6052743, 0.6052743, 0.6052743, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_074og")
texture = SubResource("AtlasTexture_074og")

[node name="Label" type="Label" parent="Rectangle15/HBoxContainer/Control_Settings/base_color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 26
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Quick_Save" type="Control" parent="Rectangle15/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 47)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Rectangle15/HBoxContainer/Control_Quick_Save"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 147.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.27058825)

[node name="base_color" type="TextureRect" parent="Rectangle15/HBoxContainer/Control_Quick_Save"]
self_modulate = Color(0.6052743, 0.6052743, 0.6052743, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_074og")
texture = SubResource("AtlasTexture_074og")

[node name="Label" type="Label" parent="Rectangle15/HBoxContainer/Control_Quick_Save/base_color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 26
text = "Quick Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Saves" type="Control" parent="Rectangle15/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 47)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Rectangle15/HBoxContainer/Control_Saves"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 147.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.27058825)

[node name="base_color" type="TextureRect" parent="Rectangle15/HBoxContainer/Control_Saves"]
self_modulate = Color(0.6052743, 0.6052743, 0.6052743, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_074og")
texture = SubResource("AtlasTexture_074og")

[node name="Label" type="Label" parent="Rectangle15/HBoxContainer/Control_Saves/base_color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 26
text = "Saves"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Undo" type="Control" parent="Rectangle15/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 47)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Rectangle15/HBoxContainer/Control_Undo"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 147.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.27058825)

[node name="base_color" type="TextureRect" parent="Rectangle15/HBoxContainer/Control_Undo"]
self_modulate = Color(0.6052743, 0.6052743, 0.6052743, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_074og")
texture = SubResource("AtlasTexture_074og")

[node name="Label" type="Label" parent="Rectangle15/HBoxContainer/Control_Undo/base_color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 26
text = "Undo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Fast_Forward" type="Control" parent="Rectangle15/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 47)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Rectangle15/HBoxContainer/Control_Fast_Forward"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 147.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.27058825)

[node name="base_color" type="TextureRect" parent="Rectangle15/HBoxContainer/Control_Fast_Forward"]
self_modulate = Color(0.6052743, 0.6052743, 0.6052743, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_074og")
texture = SubResource("AtlasTexture_074og")

[node name="Label" type="Label" parent="Rectangle15/HBoxContainer/Control_Fast_Forward/base_color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 26
text = "Fast For."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LessEvilNameChatbotServicesInc_" type="TextureRect" parent="Rectangle15"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_right = 437.0
offset_bottom = 8.0
grow_vertical = 2
texture = ExtResource("8_lswn8")

[node name="ServiceNumber#2124850285" type="TextureRect" parent="Rectangle15"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -339.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("19_facbu")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 150.0
offset_right = 268.0
offset_bottom = 200.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.15686275)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("6_ryguw")
theme_override_font_sizes/font_size = 41
text = "CLIENTS"

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_yaehf")
autoplay = true
parameters/looping = true
